# swe-calculator

./: .gitignore  LICENSE  README.md  SWE_App.sln
Calculator/: App.cpp  App.h  ButtonIDDefines.h  CMakeLists.txt  CMakeUserPresets.template.json  Calculator.h  CalculatorProcessor.cpp
SWE_App/: App.h  ButtonFactory.cpp  ButtonFactory.h  CMakeLists.txt  CMakeUserPresets.template.json  Calculator.cpp  Calculator.h  CalculatorProcessor.cpp  CalculatorProcessor.h  SWE_App.vcxproj  SWE_App.vcxproj.filters
SWE_App.Test/: ButtonFactoryTests.cpp  CalculatorProcessorTests.cpp  SWE_App.Test.vcxproj  SWE_App.Test.vcxproj.filters
